; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/picotlsvs/picotlsvs/extr_picotlsvs.c_extract_1rtt_secret.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/picotlsvs/picotlsvs/extr_picotlsvs.c_extract_1rtt_secret.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @extract_1rtt_secret(i32* %0, i8* %1, %struct.TYPE_6__** %2, i32* %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_6__**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.TYPE_6__** %2, %struct.TYPE_6__*** %8, align 8
  store i32* %3, i32** %9, align 8
  store i64 %4, i64* %10, align 8
  store i32 0, i32* %11, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call %struct.TYPE_6__* @ptls_get_cipher(i32* %12)
  %14 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %8, align 8
  store %struct.TYPE_6__* %13, %struct.TYPE_6__** %14, align 8
  %15 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %8, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = icmp eq %struct.TYPE_6__* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %5
  store i32 -1, i32* %11, align 4
  br label %42

19:                                               ; preds = %5
  %20 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %8, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* %10, align 8
  %27 = icmp ugt i64 %25, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %19
  store i32 -1, i32* %11, align 4
  br label %41

29:                                               ; preds = %19
  %30 = load i32*, i32** %6, align 8
  %31 = load i32*, i32** %9, align 8
  %32 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %8, align 8
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i8*, i8** %7, align 8
  %39 = call i32 @ptls_iovec_init(i32* null, i32 0)
  %40 = call i32 @ptls_export_secret(i32* %30, i32* %31, i64 %37, i8* %38, i32 %39, i32 1)
  store i32 %40, i32* %11, align 4
  br label %41

41:                                               ; preds = %29, %28
  br label %42

42:                                               ; preds = %41, %18
  ret i32 0
}

declare dso_local %struct.TYPE_6__* @ptls_get_cipher(i32*) #1

declare dso_local i32 @ptls_export_secret(i32*, i32*, i64, i8*, i32, i32) #1

declare dso_local i32 @ptls_iovec_init(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
